Landing page white space fix

--- a/frontend/src/views/LandingView/LandingView.scss
+++ b/frontend/src/views/LandingView/LandingView.scss
@@ -1,6 +1,5 @@
 .landing {
    background-color: #FBF6EC;
-   min-height: 100vh;
 }
 .container {
   font-weight: bold;
@@ -25,7 +24,7 @@
 .dash {
   display: block;
   width: 100%;
-  
+
 }
 
 a:link {
